tests/good/array/in0.spl
int main()
{
    int n = 10;
    int[] arr = new int[n];

    int i = 0;
    while (i < n)
    {
        arr[i] = i;
        arr[i] = i;
        arr[i] = i;
        printInt(arr[i]);
        i++;
    }

    int i = 0;
    while (i < n)
    {
        arr[i] = i;
        printInt(arr[i]);
        arr[i] = i * i;
        printInt(arr[i]);
        i++;
    }

    return 0;
}
