tests/bad/array/in0.spl
int main()
{
    int[] arr = new int[10];

    int x = arr.name;

    return 0;
}
